--- a/index.html
+++ b/index.html
@@ -2,132 +2,195 @@
 <html lang="en" data-theme="cupcake">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea House</title>
-    <!-- google font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@500;600;700&family=Fira+Sans:ital,wght@1,400;1,900&family=Handlee&family=Lato:ital,wght@0,700;0,900;1,400;1,700&family=Manrope:wght@300;400;500;600;700;800&family=Montserrat&family=Open+Sans:wght@400;500;800&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
-    <!-- tailwind and daisyui cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- fontwaesome cdn  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- tailwind custom color -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        clifford: '#da373d',
-                    }
-                }
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tea House</title>
+  <!-- google font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@500;600;700&family=Fira+Sans:ital,wght@1,400;1,900&family=Handlee&family=Lato:ital,wght@0,700;0,900;1,400;1,700&family=Manrope:wght@300;400;500;600;700;800&family=Montserrat&family=Open+Sans:wght@400;500;800&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap"
+    rel="stylesheet">
+  <!-- tailwind and daisyui cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- fontwaesome cdn  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- tailwind custom color -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
         }
-    </script>
+      }
+    }
+  </script>
 
-    <style>
-        .font-manrope{
-            font-family: 'Manrope', sans-serif;
-        }
-    </style>
+  <style>
+    .font-manrope {
+      font-family: 'Manrope', sans-serif;
+    }
+  </style>
 </head>
 
 <body class="font-manrope">
 
-    <header class="container mx-auto">
-        <div class="hero ">
-            <div class="hero-content flex-col lg:flex-row">
-              <div>
-                <h1 class="text-7xl font-extrabold">It's good <br> Tea time at the <br> Tea House</h1>
-                <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="btn btn-primary">Explore More</button>
-              </div>
-              <div>
-                <img src="./images/banner.png" class="max-w-sm" alt="">
-                <!-- rating badge -->
-                <div class="flex items-center gap-4 drop-shadow-lg p-5 w-60 bg-gray-50 -mt-16 rounded-lg ">
-                    <i class="fa-solid fa-star text-3xl text-amber-400"></i>
-                    <div>
-                        <h3 class="text-3xl">5.00</h3>
-                        <p>Trust Pilot Ratings</p>
-                    </div>
-                </div>
-              </div>
-
+  <header class="container mx-auto">
+    <div class="hero ">
+      <div class="hero-content flex-col lg:flex-row">
+        <div>
+          <h1 class="text-5xl md:text-7xl font-extrabold">It's good <br> Tea time at the <br> Tea House</h1>
+          <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+          <button class="btn btn-primary">Explore More</button>
+        </div>
+        <div>
+          <img src="./images/banner.png" class="max-w-sm" alt="">
+          <!-- rating badge -->
+          <div class="flex items-center gap-4 drop-shadow-lg p-5 w-60 bg-gray-50 -mt-16 rounded-lg ">
+            <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+            <div>
+              <h3 class="text-3xl">5.00</h3>
+              <p>Trust Pilot Ratings</p>
             </div>
           </div>
-    </header>
-
-    <main class="container mx-auto w-11/12">
-       <!-- featured section -->    
-        <section class="text-center my-24">
-          <h2 class="text-5xl font-extrabold mb-5  ">Our Featured Products </h2>
-          <p class="lg:max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-        <!-- featured tea card container -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-12  my-24">
-            <!-- first card -->
-            <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
-                <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
-                <div class="card-body ">
-                  <h2 class=" font-extrabold ">Milk Tea</h2>
-                  <p class="text-sm">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-            <!-- second card -->
-            <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
-                <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
-                <div class="card-body ">
-                  <h2 class=" font-extrabold ">Black Tea</h2>
-                  <p class=" text-sm">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-            <!-- third card -->
-            <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
-                <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
-                <div class="card-body ">
-                  <h2 class=" font-extrabold ">Lemon Tea</h2>
-                  <p class="text-sm ">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
-            <!-- fourth card -->
-            <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
-                <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
-                <div class="card-body ">
-                  <h2 class=" font-extrabold ">Green Tea</h2>
-                  <p class="text-sm ">Creamer could be replaced by fresh milk</p>
-                </div>
-              </div>
         </div>
-        </section>
 
-<!-- great tea fresh tea section -->
-<section class="my-24 gap-10 grid grid-cols-1 md:grid-cols-2">
-    <div class="grid gap-8 grid-cols-1 md:grid-cols-2 sm:mx-4">
+      </div>
+    </div>
+  </header>
+
+  <main class="container mx-auto w-11/12">
+    <!-- featured section -->
+    <section class="text-center my-24">
+      <h2 class="text-5xl font-extrabold mb-5  ">Our Featured Products </h2>
+      <p class="lg:max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority
+        have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+        believable. </p>
+      <!-- featured tea card container -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-12  my-24">
+        <!-- first card -->
+        <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
+          <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
+          <div class="card-body ">
+            <h2 class=" font-extrabold ">Milk Tea</h2>
+            <p class="text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- second card -->
+        <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
+          <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
+          <div class="card-body ">
+            <h2 class=" font-extrabold ">Black Tea</h2>
+            <p class=" text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- third card -->
+        <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
+          <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
+          <div class="card-body ">
+            <h2 class=" font-extrabold ">Lemon Tea</h2>
+            <p class="text-sm ">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- fourth card -->
+        <div class="card  bg-gradient-to-r from-[#f0efef] to-[#f0efef] shadow-xl pt-5">
+          <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
+          <div class="card-body ">
+            <h2 class=" font-extrabold ">Green Tea</h2>
+            <p class="text-sm ">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- great tea fresh tea section -->
+    <section class="my-24 gap-10 grid grid-cols-1 md:grid-cols-2">
+      <div class="grid gap-8 grid-cols-1 md:grid-cols-2 sm:mx-4">
         <div class="      h-36 rounded-xl bg-gradient-to-r from-red-100 to-amber-100"></div>
-        <div class="      p-9 flex justify-center items-center rounded-xl row-span-2 bg-[#e6a6231a]"><img src="images/fresh-1.png" alt=""></div>
-        <div class="      p-9 flex justify-center items-center rounded-xl row-span-2 bg-[#5776391a]"><img src="images/fresh-2.png" alt=""></div>
+        <div class="      p-9 flex justify-center items-center rounded-xl row-span-2 bg-[#e6a6231a]"><img
+            src="images/fresh-1.png" alt=""></div>
+        <div class="      p-9 flex justify-center items-center rounded-xl row-span-2 bg-[#5776391a]"><img
+            src="images/fresh-2.png" alt=""></div>
         <div class="      h-36 rounded-xl bg-gradient-to-r from-gray-200 to-gray-100"></div>
-    </div>
+      </div>
 
-    <div class="space-y-5">
+      <div class="space-y-5">
         <h3 class="text-5xl font-extrabold">Great Tea, <br> Freshly Presented</h3>
-        <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-         <h4 class="text-xl font-extrabold">Unique Taste</h4>
-         <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-         <h4 class="text-xl font-extrabold">Premium Quality</h4>
-         <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
-    </div>
+        <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
+          the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+          custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h4 class="text-xl font-extrabold">Unique Taste</h4>
+        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h4 class="text-xl font-extrabold">Premium Quality</h4>
+        <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+      </div>
 
-</section>
+    </section>
 
-    </main>
+    <!-- super client section -->
+    <section
+      class="flex flex-col md:flex-row gap-12 my-24 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#f00] px-16 py-24  ">
+      <div class=" flex items-center lg:pr-28">
+        <div class="space-y-5">
+          <h2 class="text-5xl font-extrabold text-white ">Meet Our Super <br> Clients</h2>
+          <p class="text-white ">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration in
+            some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <button class="btn rounded-lg font-bold text-orange-600">Show All</button>
+        </div>
+      </div>
 
-    <footer>
+      <!-- reviwe container -->
+      <div class="relative">
+        <!--next review -->
+        <div class="opacity-40 p-9 h-max relative rounded-lg mb-16 z-10 bg-white">
+          <img class="absolute -top-5 -left-5 rounded-full border-4  " src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to
+            treatment
+          </p>
+          <h4 class="font-bold mt-4">Ilham Yuda</h4>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <!--curent review -->
+        <div class="p-9 h-max absolute top-32 lg:-left-32 lg:w-[430px] rounded-lg z-20 bg-white ">
+          <img class="absolute -top-5 -left-5 rounded-full border-4  " src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to
+            treatment
+          </p>
+          <h4 class="font-bold mt-4">Ilham Yuda</h4>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <!--previous review -->
+        <div class="opacity-40 p-9 h-max relative rounded-lg z-10 bg-white">
+          <img class="absolute -top-5 -left-5 rounded-full border-4  " src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to
+            treatment
+          </p>
+          <h4 class="font-bold mt-4">Ilham Yuda</h4>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
 
-    </footer>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 
 </html>
-
